# YSGL-media_manager

./: .gitignore  README.md
media_manager_backend/: .env.example  Cargo.toml  cache_config.example.json  rustfmt.toml
media_manager_backend/.cargo/: config.toml
media_manager_backend/migrations/: 001_initial.sql  002_studios_series.sql  003_extend_media_types.sql  004_actor_backdrop.sql  005_local_file_scan.sql  006_multi_part_video.sql  007_actor_image_fields.sql  008_add_cover_video.sql  009_backdrop_url_to_array.sql  010_add_scraper_name.sql
media_manager_backend/plugins/Magnet_Scraper/: Cargo.toml  README.md  build.ps1  plugin.json
media_manager_backend/plugins/Magnet_Scraper/config/: ui_manifest.yaml
media_manager_backend/plugins/Magnet_Scraper/src/: capture_network.rs  main.rs
media_manager_backend/plugins/Media_Scraper/: .gitignore  README.md  __init__.py  plugin.json  plugin_main.py  requirements.txt  run_plugin.bat  run_plugin.py
media_manager_backend/plugins/Media_Scraper/cache/: translation_cache.json
media_manager_backend/plugins/Media_Scraper/config/: README.md  api_config_back.yaml  config.yml  male_actors.json  ui_manifest.yaml  ui_manifest_schema.json
media_manager_backend/plugins/Media_Scraper/core/: __init__.py  code_normalizer.py  config_loader.py  content_type_detector.py  error_handler.py  models.py
media_manager_backend/plugins/Media_Scraper/utils/: __init__.py  (+4 more)
media_manager_backend/src/: lib.rs  main.rs
media_manager_backend/src/api/: actors.rs  cache.rs  collections.rs  error.rs  file_scan.rs  health.rs  media.rs  mod.rs  proxy.rs  response.rs  scrape.rs  search.rs  streaming.rs  studios.rs  sync.rs
media_manager_backend/src/database/: actor_repository.rs  mod.rs  query_builder.rs  repository.rs  schema.rs  studio_repository.rs
media_manager_backend/src/models/: actor.rs  collection.rs  dto.rs  factory.rs  media.rs  media_file.rs  mod.rs  search.rs  studio.rs  validation.rs
media_manager_backend/src/plugins/: manager.rs  mod.rs  protocol.rs
media_manager_backend/src/services/: database_service.rs  file_grouper.rs  file_matcher.rs  file_scanner.rs  mod.rs
media_manager_backend/tests/: cache_module_test.rs
(+189 files in other folders)
