[package]
name = "media_manager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenv = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Regex for plugin ID matching
regex = "1.10"

# URL parsing
url = "2.5"

# URL encoding
urlencoding = "2.1"

# XML parsing
quick-xml = "0.31"

# Lazy static for global state
lazy_static = "1.4"

# Image processing
image = { version = "0.24", features = ["webp", "gif", "jpeg", "png"] }
webp = "0.2"

[dev-dependencies]
# Testing
proptest = "1.0"
tempfile = "3.0"