[package]
name = "scraper"
version = "1.0.0"
edition = "2021"
description = "SkrBT magnet scraper plugin for Media Manager"

[[bin]]
name = "Magnet_Scraper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate", "blocking"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
urlencoding = "2"
headless_chrome = "1.0"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
